--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -9,6 +9,8 @@ jobs:
     strategy:
       matrix:
         node-version: [12.x]
+    env:
+      SSH_AUTH_SOCK: /tmp/ssh_agent.sock
 
     steps:
       - uses: actions/checkout@v1
@@ -20,10 +22,12 @@ jobs:
         run: |
           npm ci
           npm run build
-          npm run inject:key
+          mkdir -p ~/.ssh
+          ssh-keyscan github.com >> ~/.ssh/known_hosts
+          ssh-agent -a $SSH_AUTH_SOCK > /dev/null
+          ssh-add - <<< " $"
         env:
           CI: true
-          SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
           REPO_NAME: auto-commit
           REPO_HOST: github.com
           REPO_USER: Marhc
