--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
   "description": "An experimentation with scheduled CI builds using Github Actions",
   "scripts": {
     "build": "node .",
-    "deploy": "node ./gitClient",
-    "inject:key": "./helpers/injectSshKey.sh"
+    "deploy": "node ./gitClient"
   },
   "dependencies": {
     "chance": "^1.1.3",
