--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -27,6 +27,7 @@ jobs:
           # Method #1 from Gitlab
           which ssh-agent || ( apt-get update -y && apt-get install openssh-client git -y )
           eval $(ssh-agent -s)
+          echo "$SSH_PRIVATE_KEY"
           echo "$SSH_PRIVATE_KEY" | ssh-add - > /dev/null
           mkdir -p ~/.ssh
           chmod 700 ~/.ssh
