--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -35,12 +35,13 @@ jobs:
           # chmod 644 ~/.ssh/known_hosts
           #
           # Method #2 by Matthias Pigulla @ https://www.webfactory.de/blog/use-ssh-key-for-private-repositories-in-github-actions
-          # mkdir -p ~/.ssh
-          # ssh-keyscan github.com >> ~/.ssh/known_hosts
-          # ssh-agent -a $SSH_AUTH_SOCK > /dev/null
-          # ssh-add - <<< " $"
-          echo $SSH_PRIVATE_KEY
-          ssh-add - <<< "${SSH_PRIVATE_KEY}"
+          mkdir -p ~/.ssh
+          ssh-keyscan github.com >> ~/.ssh/known_hosts
+          ssh-agent -a $SSH_AUTH_SOCK > /dev/null
+          ssh-add - <<< " $"
+          #
+          # Method #3 by edaemon @ https://github.community/t5/GitHub-Actions/Github-Actions-CI-how-to-use-store-deploy-key-to-download-from/td-p/29584
+          # ssh-add - <<< "${SSH_PRIVATE_KEY}"
         env:
           CI: true
           REPO_NAME: auto-commit
