--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -9,8 +9,8 @@ jobs:
     strategy:
       matrix:
         node-version: [12.x]
-    # env:
-    #  SSH_AUTH_SOCK: /tmp/ssh_agent.sock
+    env:
+      SSH_AUTH_SOCK: /tmp/ssh_agent.sock
 
     steps:
       - uses: actions/checkout@v1
