--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -9,8 +9,8 @@ jobs:
     strategy:
       matrix:
         node-version: [12.x]
-    env:
-      SSH_AUTH_SOCK: /tmp/ssh_agent.sock
+    # env:
+    #  SSH_AUTH_SOCK: /tmp/ssh_agent.sock
 
     steps:
       - uses: actions/checkout@v1
@@ -27,7 +27,6 @@ jobs:
           # Method #1 from Gitlab
           # which ssh-agent || ( apt-get update -y && apt-get install openssh-client git -y )
           # eval $(ssh-agent -s)
-          # echo "$SSH_PRIVATE_KEY"
           # echo "$SSH_PRIVATE_KEY" | ssh-add - > /dev/null
           # mkdir -p ~/.ssh
           # chmod 700 ~/.ssh
@@ -35,13 +34,14 @@ jobs:
           # chmod 644 ~/.ssh/known_hosts
           #
           # Method #2 by Matthias Pigulla @ https://www.webfactory.de/blog/use-ssh-key-for-private-repositories-in-github-actions
-          mkdir -p ~/.ssh
-          ssh-keyscan github.com >> ~/.ssh/known_hosts
-          ssh-agent -a $SSH_AUTH_SOCK > /dev/null
-          ssh-add - <<< " $"
+          # mkdir -p ~/.ssh
+          # ssh-keyscan github.com >> ~/.ssh/known_hosts
+          # ssh-agent -a $SSH_AUTH_SOCK > /dev/null
+          # ssh-add - <<< " $"
           #
           # Method #3 by edaemon @ https://github.community/t5/GitHub-Actions/Github-Actions-CI-how-to-use-store-deploy-key-to-download-from/td-p/29584
-          # ssh-add - <<< "${SSH_PRIVATE_KEY}"
+          eval "$(ssh-agent -s)"
+          ssh-add - <<< "${SSH_PRIVATE_KEY}"
         env:
           CI: true
           REPO_NAME: auto-commit
