--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -18,7 +18,7 @@ jobs:
         uses: actions/setup-node@v1
         with:
           node-version: ${{ matrix.node-version }}
-          SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
+          # SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
       - name: npm install and build
         run: |
           npm ci
@@ -40,13 +40,14 @@ jobs:
           # ssh-add - <<< " $"
           #
           # Method #3 by edaemon @ https://github.community/t5/GitHub-Actions/Github-Actions-CI-how-to-use-store-deploy-key-to-download-from/td-p/29584
-          eval "$(ssh-agent -s)"
-          ssh-add - <<< "${SSH_PRIVATE_KEY}"
+          # eval "$(ssh-agent -s)"
+          # ssh-add - <<< "${SSH_PRIVATE_KEY}"
         env:
           CI: true
           REPO_NAME: auto-commit
           REPO_HOST: github.com
           REPO_USER: Marhc
-          DEPLOY_BRANCH: master
+          REPO_BRANCH: master
           USER_NAME: marhc
           USER_EMAIL: marciohbc@gmail.com
+          USER_TOKEN: ${{ secrets.PERSONAL_TOKEN }}
