Adding deploy script to ci script

--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -23,6 +23,7 @@ jobs:
         run: |
           npm ci
           npm run build
+          npm run deploy
           #
           # Method #1 from Gitlab
           # which ssh-agent || ( apt-get update -y && apt-get install openssh-client git -y )
