Resolvendo erro em simple-git

--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -32,3 +32,4 @@ jobs:
           USER_NAME: marhc
           USER_EMAIL: ${{ secrets.USER_EMAIL }}
           USER_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          DEBUG: simple-git
