--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "chance": "^1.1.3",
+    "debug": "^4.3.4",
     "faker": "^4.1.0",
     "nanoid": "^3.1.31",
     "objects-to-csv": "^1.3.5",
